--- a/layouts/_default/taxonomy.html
+++ b/layouts/_default/taxonomy.html
@@ -5,7 +5,8 @@
             <div class="post-item post-item-no-gaps">
                 <div class="post-item-info-wrapper">
                     <div class="post-item-title  post-item-title-small">
-                        <a href="{{.FirstSection.Permalink}}">{{.FirstSection.Title}}</a> / {{ .Title }}
+                        {{ with .Site.GetPage .Data.Plural }}
+                        <a href="{{.Permalink}}"> {{ .Title }} {{ end }}</a>/ {{ .Title }}
                     </div>
                 </div>
             </div>
