Removed Paginator in terms page.

--- a/layouts/_default/terms.html
+++ b/layouts/_default/terms.html
@@ -13,7 +13,7 @@
             </div>
         </a>
         
-        {{ range .Paginator.Pages }}
+        {{ range .Pages }}
                 <a href="{{.Permalink}}" class="a-block">
                     <div class="post-item-wrapper">
                         <div class="post-item post-item-no-gaps">
