--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -17,5 +17,27 @@
             <!-- mobile footer -->
             </div>
     {{ partial "journal.html" .}}
+
+        <script src="https://cdn.jsdelivr.net/npm/cookieconsent@3/build/cookieconsent.min.js" data-cfasync="false"></script>
+                <script>
+                window.cookieconsent.initialise({
+                "palette": {
+                "popup": {
+                "background": "#237afc"
+                },
+                "button": {
+                "background": "transparent",
+                "text": "#fff",
+                "border": "#fff"
+                }
+                },
+                "content": {
+                "message": "Diese Website verwendet Cookies, um Ihnen eine bestmögliche Nutzung zu gewährleisten.",
+                "dismiss": "Verstanden",
+                "link": "Weitere Informationen",
+                "href": "https://zrezai-dev.de/datenschutz/"
+                }
+                });
+        </script>
     </body>
 </html>
