--- a/layouts/partials/copyright.html
+++ b/layouts/partials/copyright.html
@@ -1,22 +1,27 @@
 <!-- Please don't remove the information of theme makers. -->
-{{ i18n "hugo_theme" }} <a href="https://github.com/amazingrise/hugo-theme-diary">Diary</a> {{ i18n "by" }} <a href="https://amazingrise.net">Rise</a> ❤️
+{{ i18n "hugo_theme" }} <a href="https://github.com/amazingrise/hugo-theme-diary">Diary</a> {{ i18n "by" }} <a
+	href="https://amazingrise.net">Rise</a> ❤️
 <br>
-{{ i18n "ported_from" }} <a href="https://mak1t0.cc/" target="_blank" rel="noreferrer noopener">Makito</a>'s <a href="https://github.com/SumiMakito/hexo-theme-journal/" target="_blank" rel="noreferrer noopener">Journal.</a> <br>
+{{ i18n "ported_from" }} <a href="https://mak1t0.cc/" target="_blank" rel="noreferrer noopener">Makito</a>'s <a
+	href="https://github.com/SumiMakito/hexo-theme-journal/" target="_blank" rel="noreferrer noopener">Journal.</a> <br>
 <br>
 <!-- Because this project is under MIT licence. -->
 
 <div style="font-size: 20px;">
-	<a href="https://github.com/Xcalizorz" target="_blank" rel="noreferrer noopener" class="fa fa-github"></a>
-	<a href="https://www.linkedin.com/in/zadjad-rezai/" target="_blank" rel="noreferrer noopener" class="fa fa-linkedin"></a>
-	<a href="https://www.xing.com/profile/Zadjad_Rezai/" target="_blank" rel="noreferrer noopener" class="fa fa-xing"></a>
+	<a style="margin: 2px;" href="https://github.com/Xcalizorz" target="_blank" rel="noreferrer noopener"
+		class="fa fa-github"></a>
+	<a style="margin: 2px;" href="https://www.linkedin.com/in/zadjad-rezai/" target="_blank" rel="noreferrer noopener"
+		class="fa fa-linkedin"></a>
+	<a style="margin: 2px;" href="https://www.xing.com/profile/Zadjad_Rezai/" target="_blank" rel="noreferrer noopener"
+		class="fa fa-xing"></a>
 </div>
 
 &copy;
-	{{ if .Site.Copyright }}
-	{{ .Site.Copyright }}
-	{{ else }}
-	{{.Site.Home.Date.Year}} {{.Site.Title}}
-	{{ end }}
+{{ if .Site.Copyright }}
+{{ .Site.Copyright }}
+{{ else }}
+{{.Site.Home.Date.Year}} {{.Site.Title}}
+{{ end }}
 
 <!-- Add icon library -->
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
