--- a/layouts/404.html
+++ b/layouts/404.html
@@ -2,8 +2,17 @@
 
 <div ref="streamContainer" class="stream-container">
   <div class="post-list-container post-list-container-no-background">
-    <div style="position: relative;">
-      <h2>404 🐙</h2>
+    <div class="post-item-wrapper">
+      <div class="post-item post-item-no-divider">
+        <div class="post-item-info-wrapper">
+          <div class="post-item-title">
+            <a href="/" style="font-size: 50px;">404 🐙</a>
+          </div>
+          <div class="post-item-summary">
+            Die Seite konnte nicht gefunden werden.
+          </div>
+        </div>
+      </div>
     </div>
     {{range .Paginator.Pages}}
     {{if and (.IsPage) (.Params.date)}}
