--- a/assets/scss/journal.scss
+++ b/assets/scss/journal.scss
@@ -148,12 +148,15 @@ pre {
   padding: 12px 15px;
   border-radius: 5px;
   font-family: $mono-font-list;
+
   * {
     background: none;
     font-family: $mono-font-list !important;
   }
+
   code {
     padding: 0;
+
     * {
       color: inherit;
     }
@@ -165,9 +168,11 @@ blockquote {
   border-left: 3px solid rgba($color-accent, 0.7);
   color: $dark-accent;
   background: rgba($color-accent, 0.05);
+
   p {
     margin-bottom: 0;
   }
+
   * {
     color: $dark-accent;
   }
@@ -175,10 +180,12 @@ blockquote {
 
 a {
   color: $color-accent;
+
   &:hover {
     color: darken($color-accent, 10%);
     text-underline-position: under;
   }
+
   @media screen and (max-width: $single-column-max-width) {
     &:hover {
       text-decoration: none !important;
@@ -189,6 +196,7 @@ a {
 .a-block {
   display: block;
   text-decoration: none !important;
+
   &:hover {
     text-decoration: none !important;
   }
@@ -238,23 +246,28 @@ a {
 
 .single-column-nav-container {
   display: none !important;
+
   @media screen and (max-width: $single-column-max-width) {
     display: block !important;
     padding: 0;
+
     * {
       font-family: $sans-preferred-font-list;
       transition: opacity 0.5s ease-in-out;
     }
+
     button {
       padding: 0;
       padding-right: 12px;
       padding-left: 12px;
     }
+
     .nav-content {
       padding: 12px 8px;
       justify-content: flex-start;
       max-width: unset !important;
     }
+
     .navbar-brand {
       opacity: 0;
       text-align: left;
@@ -264,6 +277,7 @@ a {
       //align-items: stretch;
       flex: 1;
     }
+
     .nav-dropdown-toggle {
       display: flex;
       align-content: center;
@@ -272,11 +286,13 @@ a {
       justify-content: center;
       background: none !important;
       border: none;
+
       //padding-top: 1px;
       &:hover {
         color: #3f587d !important;
       }
     }
+
     .nav-darkmode-toggle {
       display: flex;
       align-content: center;
@@ -285,28 +301,34 @@ a {
       justify-content: center;
       background: none !important;
       border: none;
+
       //padding-top: 1px;
       &:hover {
         color: #3f587d !important;
       }
     }
+
     .nav-icon-group {
       z-index: 5;
       padding-right: 5px;
+
       ul {
         list-style: none;
         margin: 0;
         padding: 0;
       }
+
       li {
         display: inline;
         margin: 0;
         padding: 0;
       }
     }
+
     .nav-icon {
       padding: 8px;
     }
+
     .nav-background {
       opacity: 0;
       z-index: -1;
@@ -324,18 +346,22 @@ a {
 
 .single-column-header-container {
   display: none !important;
+
   @media screen and (max-width: $single-column-max-width) {
     display: block !important;
     padding: 50px 20px 80px 20px;
     transition: padding 0.5s ease-in-out, margin 0.5s ease-in-out;
     text-align: center;
+
     * {
       font-family: $sans-preferred-font-list;
       color: $deep-dark-accent;
     }
+
     .single-column-header-title {
       font-size: $single-column-nav-title-size;
     }
+
     .single-column-header-subtitle {
       font-size: $single-column-nav-subtitle-size;
     }
@@ -344,6 +370,7 @@ a {
 
 .single-column-drawer-container {
   display: none !important;
+
   @media screen and (max-width: $single-column-max-width) {
     display: block !important;
     position: fixed;
@@ -353,12 +380,14 @@ a {
     height: 100vh;
     z-index: 1800;
     transition: all 0.3s ease-in-out;
+
     .drawer-content {
       background: white;
       height: 100%;
       width: 100%;
       padding: 50px 0 80px 0;
       display: flex;
+
       .drawer-menu {
         flex-grow: 1;
         display: flex;
@@ -367,6 +396,7 @@ a {
         flex-direction: column;
         $drawer-menu-item-active-background-alpha: 0.1;
         $drawer-menu-item-active-color-darken: 30%;
+
         .drawer-menu-item {
           font-size: $single-column-nav-link-size;
           margin-bottom: 10px;
@@ -376,24 +406,26 @@ a {
           cursor: pointer;
           transition: all 0.2s linear;
           color: $deep-dark-accent;
+
           .nav-link-subitem {
             font-size: $single-column-nav-link-size;
             padding: 2px;
+
             li {
               list-style: none;
               padding-left: 8px;
             }
+
             a {
               text-decoration: none;
               color: $deep-dark-accent;
             }
           }
+
           &.active {
             border-right: 2px solid $color-accent;
-            background: rgba(
-              $color-accent,
-              $drawer-menu-item-active-background-alpha
-            );
+            background: rgba($color-accent,
+                $drawer-menu-item-active-background-alpha );
             color: darken($color-accent, $drawer-menu-item-active-color-darken);
           }
         }
@@ -404,6 +436,7 @@ a {
 
 .single-column-drawer-mask {
   display: none !important;
+
   @media screen and (max-width: $single-column-max-width) {
     display: block !important;
     position: fixed;
@@ -440,35 +473,42 @@ a {
   $nav-item-hover-color-darken: 30%;
   $nav-item-active-background-alpha: 0.03;
   $nav-item-active-color-darken: 20%;
+
   .nav-head {
     padding: 30px 28px 30px 20px;
     cursor: hand;
     cursor: pointer;
     margin-bottom: 10px;
     color: $deep-dark-accent;
+
     .nav-title {
       font-size: $nav-title-size;
       line-height: $nav-title-size * 1.4;
     }
+
     border-right: 2px solid transparent;
+
     .nav-subtitle {
       margin-top: 8px;
       font-size: $nav-subtitle-size;
     }
+
     &:hover {
-      border-right: 2px solid
-        rgba($color-accent, $nav-item-hover-indicator-alpha);
+      border-right: 2px solid rgba($color-accent, $nav-item-hover-indicator-alpha);
       background: rgba($color-accent, $nav-item-hover-background-alpha);
       color: darken($color-accent, $nav-item-hover-color-darken);
     }
+
     &.active {
       border-right: 2px solid $color-accent;
       background: rgba($color-accent, $nav-item-active-background-alpha);
       color: darken($color-accent, $nav-item-active-color-darken);
     }
   }
+
   .nav-link-list {
     flex-grow: 1;
+
     .nav-link-item {
       font-size: $nav-link-size;
       margin-bottom: 10px;
@@ -477,22 +517,26 @@ a {
       cursor: hand;
       cursor: pointer;
       color: $deep-dark-accent;
+
       .nav-link-subitem {
         font-size: $nav-link-size - 3px;
+
         li {
           list-style: none;
           padding-left: 2px;
         }
+
         a {
           text-decoration: none;
         }
       }
+
       &:hover {
-        border-right: 2px solid
-          rgba($color-accent, $nav-item-hover-indicator-alpha);
+        border-right: 2px solid rgba($color-accent, $nav-item-hover-indicator-alpha);
         background: rgba($color-accent, $nav-item-hover-background-alpha);
         color: darken($color-accent, $nav-item-hover-color-darken);
       }
+
       &.active {
         border-right: 2px solid $color-accent;
         background: rgba($color-accent, $nav-item-active-background-alpha);
@@ -500,10 +544,12 @@ a {
       }
     }
   }
+
   .nav-footer {
     padding: 20px 30px 0 20px;
     font-size: $nav-footer-size;
   }
+
   @media screen and (max-width: $single-column-max-width) {
     display: none;
   }
@@ -523,15 +569,18 @@ a {
   flex-direction: column;
   justify-content: space-between;
   align-items: flex-start;
+
   /*padding: 50px 0;*/
   .pagination {
     // position: fixed;
     bottom: 0;
     display: flex;
     flex-direction: column;
+
     > :not(:last-child) {
       // border-bottom: 1px solid rgba(128, 128, 128, 0.12);
     }
+
     .pagination-indicator {
       display: flex;
       flex-direction: column;
@@ -545,6 +594,7 @@ a {
       width: $extra-container-pagination-width;
       font-family: $mono-font-list;
     }
+
     .pagination-action {
       display: flex;
       flex-direction: column;
@@ -556,25 +606,31 @@ a {
       cursor: hand;
       cursor: pointer;
       padding: 15px 0;
+
       :not(.pagination-action-icon) {
         transition: all 0.2s linear;
         font-size: 13px;
         font-family: $mono-font-list;
       }
+
       .pagination-action-icon {
         // margin-right: 4px;
       }
+
       * {
         transition: all 0.3s linear;
       }
+
       &:hover {
         text-decoration: none;
+
         * {
           color: $dark-accent;
         }
       }
     }
   }
+
   @media screen and (max-width: $single-column-max-width) {
     display: none;
   }
@@ -600,6 +656,7 @@ a {
   width: 100%;
 
   min-height: 100vh;
+
   @media screen and (max-width: $single-column-max-width) {
     padding: 0;
     min-height: unset;
@@ -617,11 +674,13 @@ a {
       padding: 0;
       box-shadow: 0 0 0 rgba(0, 0, 0, 0.2);
     }
+
     &,
-    > * {
+    >* {
       .post-item-wrapper {
         cursor: hand;
         cursor: pointer;
+
         .post-item {
           margin: 0 28px 0 35px;
           padding: 30px 0;
@@ -636,6 +695,7 @@ a {
             box-shadow: 0 0 8px rgba(0, 0, 0, 0.1);
             background: $front-container-background;
           }
+
           .post-item-info-wrapper {
             flex-grow: 1;
 
@@ -643,6 +703,7 @@ a {
               width: 100%;
               padding: 15px 20px;
             }
+
             .post-item-title {
               font-size: $post-title-size;
               font-weight: 500;
@@ -676,6 +737,7 @@ a {
                 margin-bottom: 5px;
               }
             }
+
             .post-item-meta {
               font-size: $post-meta-size;
 
@@ -684,12 +746,15 @@ a {
               }
             }
           }
+
           .post-item-image-wrapper {
             margin-left: 20px;
+
             @media screen and (max-width: $single-column-max-width) {
               width: 100%;
               margin-left: 0;
             }
+
             .post-item-image {
               width: 230px;
               height: 120px;
@@ -706,10 +771,12 @@ a {
             }
           }
         }
+
         @media screen and (max-width: $single-column-max-width) {
           .post-item-no-divider {
             border-bottom: none !important;
           }
+
           .post-item-no-gaps {
             margin: 0;
             box-shadow: none;
@@ -723,11 +790,13 @@ a {
         &:not(.post-item-wrapper-no-hover):hover {
           text-decoration: none;
           background: rgba(0, 0, 0, 0.03);
+
           .post-item-title {
             text-decoration: underline;
             text-decoration-style: 0.5px solid $color-accent;
             text-underline-position: under;
           }
+
           * {
             color: $dark-accent;
           }
@@ -755,17 +824,20 @@ a {
       }
     }
   }
+
   .post-list-container-no-background {
     @media screen and (max-width: $single-column-max-width) {
       background: none;
     }
   }
+
   .post-list-container-shadow {
     @media screen and (max-width: $single-column-max-width) {
       // box-shadow: 0 -6px 8px -4px rgba(0, 0, 0, 0.1);
       box-shadow: 0 0px 8px rgba(0, 0, 0, 0.1);
     }
   }
+
   .post-list-footer {
     text-align: center;
     width: 100%;
@@ -775,8 +847,10 @@ a {
     font-size: 13px;
     padding: 15px;
   }
+
   .post {
     padding: 0 0 20px 0;
+
     .post-head-wrapper {
       margin-top: -20px;
       background: no-repeat center;
@@ -787,31 +861,31 @@ a {
       @media screen and (max-width: $single-column-max-width) {
         padding-top: 120px;
       }
+
       * {
         color: white;
       }
+
       .post-title {
         padding: 80px 35px 30px 35px;
         font-size: $post-title-size;
         font-weight: 600;
         font-style: normal;
         line-height: 1.5em;
-        background: -moz-linear-gradient(
-          top,
-          rgba(0, 0, 0, 0) 0%,
-          rgba(0, 0, 0, 0.75) 100%
-        ); /* FF3.6-15 */
-        background: -webkit-linear-gradient(
-          top,
-          rgba(0, 0, 0, 0) 0%,
-          rgba(0, 0, 0, 0.75) 100%
-        ); /* Chrome10-25,Safari5.1-6 */
-        background: linear-gradient(
-          to bottom,
-          rgba(0, 0, 0, 0) 0%,
-          rgba(0, 0, 0, 0.75) 100%
-        ); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-        filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#00000000', endColorstr='#c6000000', GradientType=0); /* IE6-9 */
+        background: -moz-linear-gradient(top,
+            rgba(0, 0, 0, 0) 0%,
+            rgba(0, 0, 0, 0.75) 100%);
+        /* FF3.6-15 */
+        background: -webkit-linear-gradient(top,
+            rgba(0, 0, 0, 0) 0%,
+            rgba(0, 0, 0, 0.75) 100%);
+        /* Chrome10-25,Safari5.1-6 */
+        background: linear-gradient(to bottom,
+            rgba(0, 0, 0, 0) 0%,
+            rgba(0, 0, 0, 0.75) 100%);
+        /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+        filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#00000000', endColorstr='#c6000000', GradientType=0);
+        /* IE6-9 */
 
         @media screen and (max-width: $single-column-max-width) {
           font-size: $single-column-post-title-size;
@@ -828,16 +902,19 @@ a {
 
         .post-meta {
           margin: 0;
+
           &,
           * {
             font-size: 16px;
           }
+
           .material-icons {
             vertical-align: middle;
             margin-bottom: 3px;
           }
 
           @media screen and (max-width: $single-column-max-width) {
+
             &,
             * {
               font-size: $single-column-post-meta-size;
@@ -853,29 +930,35 @@ a {
       @media screen and (max-width: $single-column-max-width) {
         padding: 30px 20px 0 20px;
       }
+
       .post-title {
         font-size: $post-title-size;
         font-weight: 600;
         font-style: normal;
         line-height: 1.5em;
+
         .post-subtitle {
           font-size: $post-subtitle-size;
           width: 80%;
           opacity: 0.6;
           padding: 0px 0 8px 0;
         }
+
         .post-meta {
           margin: 0;
+
           &,
           * {
             font-size: 16px;
           }
+
           .material-icons {
             vertical-align: middle;
             margin-bottom: 3px;
           }
 
           @media screen and (max-width: $single-column-max-width) {
+
             &,
             * {
               font-size: $single-column-post-meta-size;
@@ -895,20 +978,25 @@ a {
       @media screen and (max-width: $single-column-max-width) {
         padding: 20px 20px 35px 20px;
       }
+
       .post-body {
         font-size: $post-body-size;
         line-height: 1.5em;
+
         * {
           word-wrap: break-word;
         }
+
         img {
           max-width: 100%;
           border-radius: 5px;
           overflow: hidden;
         }
+
         @media screen and (max-width: $single-column-max-width) {
           font-size: $single-column-post-body-size;
         }
+
         /*
         Table of Contents
         */
@@ -943,6 +1031,7 @@ a {
         // Yay a dirty hack
         overflow: hidden !important;
       }
+
       padding: 20px 35px;
 
       @media screen and (max-width: $single-column-max-width) {
@@ -975,32 +1064,39 @@ a {
   max-height: 80vh;
   overflow: auto;
   background: rgba($color-accent, 0.05);
+
   &,
   * {
     font-size: $toc-size;
   }
+
   ul {
     list-style: none;
     padding: 0 0 0 20px;
     margin: 0;
     line-height: 1.7em;
   }
+
   .toc-content {
     padding: 20px;
   }
+
   .toc-active {
     color: darken($color-accent, 40%) !important;
   }
+
   @media screen and (max-width: $single-column-max-width) {
     line-height: 2em;
     float: none;
     margin-top: 30px;
     margin-left: 0;
     margin-right: 0;
+
     &,
     * {
       /*font-size: $single-column-toc-size;*/
     }
+
     .toc-content {
       padding: 10px;
     }
@@ -1018,9 +1114,11 @@ a {
     display: flex !important;
     flex-direction: row;
     justify-content: space-between;
+
     &:not(.index-page) {
       margin-top: 15px;
     }
+
     .pagination-indicator {
       display: flex;
       flex-direction: column;
@@ -1033,6 +1131,7 @@ a {
       font-size: 12px;
       font-family: $mono-font-list;
     }
+
     .pagination-action {
       display: flex;
       flex-direction: column;
@@ -1044,19 +1143,24 @@ a {
       cursor: hand;
       cursor: pointer;
       padding: 15px 0;
+
       :not(.pagination-action-icon) {
         transition: all 0.2s linear;
         font-size: 13px;
         font-family: $mono-font-list;
       }
+
       .pagination-action-icon {
         // margin-right: 4px;
       }
+
       * {
         transition: all 0.3s linear;
       }
+
       &:hover {
         text-decoration: none;
+
         * {
           color: $dark-accent;
         }
@@ -1080,9 +1184,11 @@ mjx-container {
   margin-top: 1em;
   margin-left: 1.5em;
   margin-right: 0.2em;
+
   @media screen and (max-width: $single-column-max-width) {
     margin-left: 0.5em;
     padding-left: 0.2em;
+
     .gsst_a {
       display: none;
     }
@@ -1103,6 +1209,7 @@ mjx-container {
   flex-direction: row;
   padding-left: 10px;
   flex-wrap: wrap;
+
   .tag {
     margin: 10px;
   }
