--- a/assets/scss/journal.scss
+++ b/assets/scss/journal.scss
@@ -3,11 +3,13 @@ $color-accent: #1976d2;
 $back-container-background: #fcfcfc;
 $front-container-background: #ffffff;
 
-$default-font-list: "Lora", "Noto Serif SC";
+$default-font-list: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+  "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji",
+  "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
 $mono-font-list: "Fira Mono", "Cousine", Monaco, Menlo, "Source Code Pro",
   monospace;
-$sans-preferred-font-list: "Montserrat", "Roboto", "Source Sans Pro",
-  "Helvetica", $default-font-list;
+//$sans-preferred-font-list: "Montserrat", "Roboto", "Source Sans Pro", "Helvetica", $default-font-list;
+$sans-preferred-font-list: $default-font-list;
 
 $side-container-width: 25%; //280px;
 $extra-container-width: 25%;
@@ -74,10 +76,10 @@ body {
   box-sizing: border-box;
 }
 
-h1, h2, h3{
-
-  font-weight: bold;
-
+h1,
+h2,
+h3 {
+  font-weight: 400;
 }
 
 h1 {
@@ -118,8 +120,8 @@ button {
 }
 
 table {
-    table-layout: fixed;
-    overflow-x: scroll;
+  table-layout: fixed;
+  overflow-x: scroll;
 }
 
 button {
@@ -371,8 +373,8 @@ a {
             font-size: $single-column-nav-link-size;
             padding: 2px;
             li {
-                list-style: none;
-                padding-left: 8px; 
+              list-style: none;
+              padding-left: 8px;
             }
             a {
               text-decoration: none;
@@ -473,8 +475,8 @@ a {
       .nav-link-subitem {
         font-size: $nav-link-size - 3px;
         li {
-            list-style: none;
-            padding-left: 2px; 
+          list-style: none;
+          padding-left: 2px;
         }
         a {
           text-decoration: none;
@@ -506,7 +508,7 @@ a {
   position: fixed;
   top: 0;
   right: 0;
-  
+
   width: $extra-container-width;
   /*text-align: right;*/
   font-family: $sans-preferred-font-list;
@@ -590,7 +592,7 @@ a {
   padding-left: $side-container-width;
   padding-right: $extra-container-width;
   width: 100%;
-  
+
   min-height: 100vh;
   @media screen and (max-width: $single-column-max-width) {
     padding: 0;
@@ -637,7 +639,7 @@ a {
             }
             .post-item-title {
               font-size: $post-title-size;
-              font-weight: 600;
+              font-weight: 500;
               font-style: normal;
               margin-bottom: 10px;
               line-height: 1.5em;
@@ -661,6 +663,7 @@ a {
               font-size: $post-summary-size;
               line-height: 1.5em;
               margin-bottom: 10px;
+              //font-weight:300;
 
               @media screen and (max-width: $single-column-max-width) {
                 font-size: $single-column-post-summary-size;
@@ -716,7 +719,7 @@ a {
           background: rgba(0, 0, 0, 0.03);
           .post-item-title {
             text-decoration: underline;
-            text-decoration-style: 2px solid $color-accent;
+            text-decoration-style: 0.5px solid $color-accent;
             text-underline-position: under;
           }
           * {
@@ -767,7 +770,6 @@ a {
     padding: 15px;
   }
   .post {
-
     padding: 0 0 20px 0;
     .post-head-wrapper {
       margin-top: -20px;
@@ -942,22 +944,18 @@ a {
       }
     }
   }
-
-
-
-  
 }
 
 #single-column-footer {
-    display: none;
+  display: none;
 
-    @media screen and (max-width: $single-column-max-width) {
-      display: block !important;
-      text-align: center;
-      font-size: $single-column-nav-footer-size;
-      font-family: $sans-preferred-font-list;
-      padding: 40px 20px 40px 20px;
-    }
+  @media screen and (max-width: $single-column-max-width) {
+    display: block !important;
+    text-align: center;
+    font-size: $single-column-nav-footer-size;
+    font-family: $sans-preferred-font-list;
+    padding: 40px 20px 40px 20px;
+  }
 }
 
 .toc {
@@ -980,10 +978,10 @@ a {
     margin: 0;
     line-height: 1.7em;
   }
-  .toc-content{
+  .toc-content {
     padding: 20px;
   }
-  .toc-active{
+  .toc-active {
     color: darken($color-accent, 40%) !important;
   }
   @media screen and (max-width: $single-column-max-width) {
@@ -996,7 +994,7 @@ a {
     * {
       /*font-size: $single-column-toc-size;*/
     }
-    .toc-content{
+    .toc-content {
       padding: 10px;
     }
   }
@@ -1004,6 +1002,10 @@ a {
 
 .pagination {
   display: none;
+
+  .pagination-action {
+    -webkit-appearance: none; // Fix bootstrap set the appearance to button.
+  }
 
   @media screen and (max-width: $single-column-max-width) {
     display: flex !important;
@@ -1060,8 +1062,7 @@ a {
   color: $dark-accent;
 }
 
-mjx-container
-{
+mjx-container {
   overflow-y: hidden !important;
 }
 
