--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -10,7 +10,9 @@
             {{- partial "mobile-header.html" . -}}
             <!-- mobile header -->
             <div id="content">
+                <div id="streamContainer" class="stream-container">
                     {{- block "main" . }}{{- end }}
+                    </div>
             </div>
         
             {{- partial "mobile-footer.html" . -}}
@@ -39,5 +41,6 @@
                 }
                 });
         </script>
+    <script src="{{"/js/journal.js" | relURL}}"></script>
     </body>
 </html>
