--- a/layouts/partials/extrabar.html
+++ b/layouts/partials/extrabar.html
@@ -1,9 +1,9 @@
-<div ref="extraContainer" class="extra-container">
+<div id="extraContainer" class="extra-container">
     {{ if and (isset .Site.Params "googlesearchcode") (.IsHome) }}
     <script async src="https://cse.google.com/cse.js?cx={{.Site.Params.googleSearchCode}}"></script>
     <div class="gcse-searchbox-only" mobileLayout="true"></div>
     {{ end }}
-    {{ if and (not (.Site.Params.disableToC) ) (.IsPage) }}
+    {{ if and (not (.Params.disableToC) ) (.IsPage) }}
     <div class="toc animated-visibility" :class="{ invisible: scrollY <= 140 }">
         {{- partial "toc.html" . -}}
     </div>
@@ -15,13 +15,10 @@
             </i>
         </a>
         {{ if not .Site.Params.disableDarkMode }}
-        <a class="pagination-action" v-on:click="toggleDarkMode">
-            <i class="material-icons pagination-action-icon" v-if="isDarkMode">
-                brightness_4
-            </i>
-            <i class="material-icons pagination-action-icon" v-else="isDarkMode">
-                brightness_7
-            </i>
+        <a type="button" class="pagination-action" id="darkModeToggleButton">
+            <span class="material-icons pagination-action-icon" id="darkModeToggleIcon">
+                dark_mode
+            </span>
         </a>
         {{ end }}
         {{ if .Paginator }}
