--- a/layouts/partials/mobile-header.html
+++ b/layouts/partials/mobile-header.html
@@ -1,4 +1,4 @@
-<div class="single-column-drawer-container" ref="drawer"
+<div class="single-column-drawer-container" id="drawer"
      v-bind:class="{ 'single-column-drawer-container-active': isDrawerOpen }">
     <div class="drawer-content">
         <div class="drawer-menu">
@@ -14,11 +14,14 @@
                     {{$actived = "active"}}
                 {{end}}
                 {{ if .HasChildren }}
-                <parent name="{{ .Name }}" type="drawer-menu-item {{$actived}}">
-                    {{ range .Children }}
+                <div class="a-block" class="drawer-menu-item {{$actived}}" v-on:click="isHidden = !isHidden">
+                    {{ .Name }}
+                    <div class="nav-link-subitem" v-if="!isHidden">
+                        {{ range .Children }}
                         <li><a href="{{ .URL }}"> {{ .Name }}</a></li>
                     {{ end }}
-                </parent>
+                    </div>
+                </div>
                 {{ else }}
                 <!--<a class="a-block nav-link-item {{$actived}}" href="{{ .URL }}">-->
                 <a class="a-block drawer-menu-item {{ $actived }}" href="{{ .URL }}">
@@ -35,34 +38,31 @@
     </div>
 </div>
 <transition name="fade">
-    <div v-bind:class="{ 'single-column-drawer-mask': mounted }" v-if="isDrawerOpen" v-on:click="toggleDrawer"></div>
+    <div id="drawer-mask" v-bind:class="{ 'single-column-drawer-mask': mounted }" v-if="isDrawerOpen" v-on:click="toggleDrawer"></div>
 </transition>
-<nav ref="navBar" class="navbar sticky-top navbar-light single-column-nav-container">
-    <div ref="navBackground" class="nav-background"></div>
+<nav id="navBar" class="navbar sticky-top navbar-light single-column-nav-container">
+    <div id="navBackground" class="nav-background"></div>
     <div class="container container-narrow nav-content">
         <button id="nav_dropdown_btn" class="nav-dropdown-toggle" type="button" v-on:click="toggleDrawer">
             <i class="material-icons">
                 menu
             </i>
         </button>
-        <a ref="navTitle" class="navbar-brand" href="{{.Site.BaseURL}}">
+        <a id="navTitle" class="navbar-brand" href="{{ "" | absLangURL }}">
             {{.Site.Title}}
         </a>
         {{ if not .Site.Params.disableDarkMode }}
-        <button type="button" class="nav-darkmode-toggle" v-on:click="toggleDarkMode">
-            <i class="material-icons" v-if="isDarkMode">
-                brightness_4
-            </i>
-            <i class="material-icons" v-else="isDarkMode">
-                brightness_7
+        <button type="button" class="nav-darkmode-toggle" id="darkModeToggleButton2">
+            <i class="material-icons" id="darkModeToggleIcon2">
+                dark_mode
             </i>
         </button>
         {{ end }}
     </div>
 </nav>
-<div class="single-column-header-container" ref="pageHead"
+<div class="single-column-header-container" id="pageHead"
      v-bind:style="{ transform: 'translateZ(0px) translateY('+.3*scrollY+'px)', opacity: 1-navOpacity }">
-    <a href="{{.Site.BaseURL}}">
+    <a href="{{ "" | absLangURL }}">
         <div class="single-column-header-title">{{.Site.Title}}</div>
         {{ with .Site.Params.subtitle }}
         <div class="single-column-header-subtitle">{{.}}</div>
