--- a/layouts/partials/sidebar.html
+++ b/layouts/partials/sidebar.html
@@ -1,8 +1,8 @@
-<div ref="sideContainer" class="side-container">
+<div id="sideContainer" class="side-container">
     {{ if eq .Title .Site.Title}}
-    <a class="a-block nav-head active" href="{{.Site.BaseURL}}">
+    <a class="a-block nav-head active" href="{{ "" | absLangURL }}">
     {{ else }}
-    <a class="a-block nav-head false" href="{{.Site.BaseURL}}">
+    <a class="a-block nav-head false" href="{{ "" | absLangURL }}">
     {{ end }}
         <div class="nav-title">
             {{.Site.Title}}
@@ -23,11 +23,14 @@
                 {{$actived = "active"}}
             {{end}}
             {{ if .HasChildren }}
-            <parent name="{{ .Name }}" type="nav-link-item {{$actived}}">
-                {{ range .Children }}
+            <div class="a-block" class="nav-link-item {{$actived}}" v-on:click="isHidden = !isHidden">
+                {{ .Name }}
+                <div class="nav-link-subitem" v-if="!isHidden">
+                    {{ range .Children }}
                     <li><a href="{{ .URL }}"> {{ .Name }}</a></li>
-                {{ end }}
-            </parent>
+                    {{ end }}
+                </div>
+            </div>
             {{ else }}
             <!--<a class="a-block nav-link-item {{$actived}}" href="{{ .URL }}">-->
             <a class="a-block nav-link-item {{ $actived }}" href="{{ .URL }}">
