--- a/layouts/partials/extended_head.html
+++ b/layouts/partials/extended_head.html
@@ -3,4 +3,4 @@ If you want to include any custom html just before </head>, put it in /layouts/p
 Do not put anything in this file - it's only here so that hugo won't throw an error if /layouts/partials/extended_head.html doesn't exist.
 -->
 
-<link rel="stylesheet" type="text/css" href="css/cookieconsent.min.css" />
+<link type="text/css" rel="stylesheet" href="{{"/css/cookieconsent.min.css" | relURL}}">
